assets/css/hacks.css
html,
body,
.main {
  height: 100%;
}

body {
  padding-top: 3em;
}

.topbar {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
}


.main .loader {
  display: none;
}
.main .loader:after {
  position: fixed;
  content: "";
  top: 50%;
  left: 50%;
  width: 3em;
  height: 3em;
  margin-top: -1.5em;
  margin-left: -1.5em;
  background: #fff url(../images/loader.black.gif) no-repeat center center;
  border-radius: 50%;
  z-index: 10000000;
}
body.loading .topbar:after {
  position: absolute;
  content: "";
  top: 0;
  right: 0;
  width: 4em;
  height: 3em;
  background: #000 url(../images/loader.white.gif) no-repeat center center;
  border-left: 1px solid #555;
  z-index: 10000000;
}

.dropdown {
  display: none;
}

.sidebar-content > .marginalia {
  margin-bottom: 1.5em;
  line-height: 1.5em;
}

.dropzone.subpages .items {
  min-height: 2.5em;
}


@media screen and (min-width: 50em) {
  .mainbar .form {
    padding: 0 1.5em 6em 1.5em;
  }
}

.draggable-helper {
  position: fixed;
  z-index: 10000;
  white-space: nowrap;
  background: #000;
  padding: .25em 1em;
  color: #fff;
  border-radius: 3px;
}

.file-selector {
  border: 1px solid #efefef;
  max-height: 15.4em;
  overflow: auto;
}
.file-selector label {
  cursor: pointer;
}
.file-selector input {
  position: absolute;
  top: 1.1em;
  right: 1.5em;
}

.sidebar .pagination {
  border-top: 2px solid #ddd;
  margin-top: -1em;
}

.subpages {
  margin-bottom: 1em;
}

.mainbar .form .message {
  margin: 1.5em 0 3em;
}
.mainbar .form .message-content {
  border-radius: 3px;
}

.search-field {
  position: relative;
  overflow: hidden;
  white-space: nowrap;
}
.search-field .icon {
  position: absolute;
  top: .4em;
  left: 0;
  z-index: 1;
}
.search-input {
  position: relative;
  padding: 0 0 .5em 2em;
  font-weight: 600;
  line-height: 1.5em;
  border: 0;
  border-bottom: 2px solid #ddd;
  border-radius: 0;
}
.search-dropdown {
  padding-bottom: 3em;
}
.search-dropdown button {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  text-align: left;
  border: 0;
  padding: 1em 2em;
  line-height: 1em;
  margin-bottom: 1px;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  background: #fff;
}
.search-dropdown button:focus {
  outline: 0;
  background: #8dae28;
  color: #fff;
}
.search-dropdown button::-moz-focus-inner {
  border: 0;
  padding: 0;
}
.search-close {
  position: absolute;
  top: 0;
  right: 0;
  border-left: 1px solid #555;
  width: 4em;
  color: #fff;
  text-align: center;
  background: #000;
}
.search-help {
  position: relative;
  font-style: italic;
  max-width: 30em;
  padding-left: 4.5em;
}
.search-help:after {
  left: 1.5em;
  top: -.5em;
  background: url(../images/hint.arrows.png) no-repeat top left;
}

.languages {
  right: 4em;
}

.subpages-help {
  position: relative;
  font-style: italic;
}
.subpages-help:after,
.search-help:after {
  position: absolute;
  content: "";
  top: -1.5em;
  height: 6em;
  width: 3em;
}
.subpages-help-right {
  padding-right: 3em;
}
.subpages-help-right:after {
  right: 0;
  background: url(../images/hint.arrows.png) no-repeat top right;
}
.subpages-help-left {
  padding-left: 3em;
}
.subpages-help-left:after {
  left: 0;
  background: url(../images/hint.arrows.png) no-repeat top left;
}


a.tag {
  line-height: 1.25em;
}


.field-is-disabled {
  opacity: .5;
}
.field-is-disabled .label {
  color: #555;
}

.selectbox-wrapper {
  height: 1.5em;
  overflow: hidden;
}

.label-option {
  line-height: 1.5em;
}

.dashboard-box {
  border: 2px solid #ddd;
  overflow: hidden;
  background: #efefef;
}
.dashboard-box li {
  border-bottom: 1px solid #ddd;
  list-style: none;
}
.dashboard-box li:last-child {
  border-bottom: 0;
}
.dashboard-box li a {
  display: block;
  padding: .5em 1em;
  line-height: 1.5em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.dashboard-box .text {
  padding: .75em 1em;
}

.input-is-readonly .selectbox-wrapper {
  pointer-events: none;
}

.uid-preview {
  width: 20em;
  overflow: hidden;
  display: block;
  -ms-word-break: break-word;
  word-break: break-word;
  text-overflow: ellipsis;
}

